--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,10 @@ html{
   -ms-overflow-style: none;
   scrollbar-width: none;
 }
+
+@media only screen and  (max-width: 440px){
+  .app__videos{
+    width: 100%;
+    height: 100vh;
+  }
+}
