--- a/src/pages/components/footer/videoFooter.css
+++ b/src/pages/components/footer/videoFooter.css
@@ -57,3 +57,13 @@
         transform: translateX(-100%);
     }
 }
+
+@media only screen and  (max-width: 440px){
+    .videoFooter{
+      bottom: 22%;
+    }
+
+    .videoFooterMusic_text{
+        width: 78%;
+    }
+  }
