--- a/src/pages/components/sidebar/videoSidebar.css
+++ b/src/pages/components/sidebar/videoSidebar.css
@@ -9,3 +9,9 @@
     padding: 20px;
     text-align: center;
 }
+
+@media only screen and  (max-width: 440px){
+    .videoSidebar{
+        top: 46%;
+    }
+  }
